updated footer links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
       <img src="images/profile_pic.png" alt="Drawing of Ptecode" class="profile-image">
       <h1 class="tag name">Hello, I’m Ptecode.</h1>
-      <p class="tag location">Front-end Web Developer</p>
+      <p class="tag location">Front-End Web Developer</p>
     </header>
 
     <main class="flex">
@@ -53,7 +53,7 @@
 
     <footer>
       <ul>
-        <li><a href="#" target="_blank" class="social github">Github</a></li>
+        <li><a href="https://github.com/ptecode" target="_blank" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2016, Ptecode</p>
     </footer>
