--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <header>
       <img src="images/profile_pic.png" alt="Drawing of Ptecode" class="profile-image">
       <h1 class="tag name">Hello, I’m Ptecode.</h1>
-      <p class="tag location">Front-end Web Developer</p>
+      <p class="tag location">Front-End Web Developer</p>
     </header>
 
     <main class="flex">
@@ -35,14 +35,14 @@
       <div class="card project">
         <h2>Online Registration Form</h2>
         <img src="images/hourglass.png" alt="project coming soon" class="placeholder">
-        <p>This project is a responsive, mobile-friendly registration form using a wide variety of HTML form input types and attributes. The mobile and  desktop versions are built using media queries, and a "mobile-first" approach.</p>
+        <p>This project is a responsive, mobile-friendly registration form using a wide variety of HTML form input types and attributes. The mobile and desktop versions are built using media queries, and a "mobile-first" approach.</p>
         <button class="coming-soon">Coming Soon</button>
       </div>
     </main>
 
     <footer>
       <ul>
-        <li><a href="#" target="_blank" class="social github">Github</a></li>
+        <li><a href="https://github.com/ptecode" target="_blank" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2016, Ptecode</p>
     </footer>
